<resources>
    <string name="app_name">H3 MPlayer</string>
    <string name="shuffle_btn">shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="total_songs">Total Songs</string>
    <string name="music_player">Music PLayer</string>
    <string name="song_name">Song Name</string>
    <string name="back_button">Back</string>
    <string name="start">00:00</string>
    <string name="repeat">Repeat</string>
    <string name="Equlizer">Equalizer</string>
    <string name="timer">timer</string>
    <string name="end">loading</string>
    <string name="share">share</string>
    <string name="devname">Developed by Hemanth kumar</string>
    <string name="todo">TODO</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="textnv">Welcome to, \nH3 Music Player</string>
    <string name="appicon">Icon</string>
    <string name="feedback">Feedback</string>
    <string name="setting">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="songalbum">Song Album</string>
</resources>